cluster/apps/actualbudget/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actualbudget
  namespace: spuxx-dev
  labels:
    app: actualbudget
spec:
  replicas: 1
  selector:
    matchLabels:
      app: actualbudget
  template:
    metadata:
      labels:
        app: actualbudget
    spec:
      containers:
        - name: actualbudget
          image: actualbudget/actual-server:24.7.0
          ports:
            - containerPort: 8080
          securityContext:
            runAsUser: 9004
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          hostPath:
            path: /home/actualbudget/data
