cluster/apps/actualbudget/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: actualbudget
  namespace: spuxx-dev
spec:
  selector:
    app: actualbudget
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
